fix extra post info being hidden by theme

--- a/static/themes/HACKERMANS.css
+++ b/static/themes/HACKERMANS.css
@@ -20,7 +20,8 @@
 .fullpostbody,
 .noreplytext,
 #hometitle,
-#hometopicslist {
+#hometopicslist,
+#fullpostinfo {
     color: lime;
 }
 
